--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
           </div>
           <div class="cv-actions">
             <!-- Make sure this filename matches your actual PDF file -->
-            <a href="Waseem-Aljumah-CV.pdf" class="btn primary" target="_blank">
+            <a href="Waseem Aljumah - CV.pdf" class="btn primary" target="_blank">
               Download Resume (PDF)
             </a>
           </div>
@@ -555,4 +555,5 @@
     </script>
   </body>
 </html>
+
 
