--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <div class="hero-card">
           <div class="hero-avatar">
-            <img src="waseem.jpg" alt="Waseem Photo" />
+            <img src="Waseem.jpg" alt="Waseem Photo" />
           </div>
           <ul class="hero-info-list">
             <li><strong>Name:</strong> Waseem Zahr Aljumah</li>
@@ -585,3 +585,4 @@
     </script>
   </body>
 </html>
+
