--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Waseem Zahr Aljumah | Portfolio</title>
     <link rel="stylesheet" href="style.css" />
-    <!-- Google Font (optional) -->
+
     <link
       href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap"
       rel="stylesheet"
@@ -62,7 +62,7 @@
 
         <div class="hero-card">
           <div class="hero-avatar">
-            <img src="waseem.jpg" alt="Waseem Photo" />
+            <img src="Waseem.jpg" alt="Waseem Photo" />
           </div>
           <ul class="hero-info-list">
             <li><strong>Name:</strong> Waseem Zahr Aljumah</li>
@@ -535,11 +535,12 @@
       yearSpan.textContent = new Date().getFullYear();
     </script>
     <script>
-      // كل عنصر له نص ولون
+
+      
       const roles = [
-        { text: "Web Developer", color: "#38bdf8" }, // أزرق سماوي
-        { text: "Business & System Analyst", color: "#a855f7" }, // بنفسجي
-        { text: "IT Support", color: "#22c55e" }, // أخضر
+        { text: "Web Developer", color: "#38bdf8" }, 
+        { text: "Business & System Analyst", color: "#a855f7" },
+        { text: "IT Support", color: "#22c55e" },
       ];
 
       let index = 0;
@@ -548,7 +549,7 @@
       function typeText(role, callback) {
         let i = 0;
         element.textContent = "";
-        element.style.color = role.color; // نغير اللون قبل الكتابة
+        element.style.color = role.color; 
 
         const typing = setInterval(() => {
           element.textContent += role.text[i];
@@ -556,9 +557,9 @@
 
           if (i === role.text.length) {
             clearInterval(typing);
-            setTimeout(callback, 1200); // وقت التوقف قبل الحذف
+            setTimeout(callback, 1200); 
           }
-        }, 80); // سرعة الكتابة
+        }, 80);
       }
 
       function deleteText(callback) {
@@ -568,7 +569,7 @@
             clearInterval(deleting);
             callback();
           }
-        }, 50); // سرعة الحذف
+        }, 50);
       }
 
       function startAnimation() {
@@ -585,3 +586,4 @@
     </script>
   </body>
 </html>
+
